# superprod2zeus

./: LICENSE  README.md  pyproject.toml
superprod2zeus/: __init__.py
tests/data/: percentage_worklog.tsv  superprod_worklog.csv
